crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__E402_E402_8.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 [*] Module level import not at top of file
  --> E402_8.py:11:1
   |
 9 | assert sys.platform.startswith(("win32", "cygwin"))
10 |
11 | import msvcrt
   | ^^^^^^^^^^^^^
   |
help: Move module level imports to top of file
   |
6  |
7  + import msvcrt
8  | import sys
9  |
10 | assert sys.platform.startswith(("win32", "cygwin"))
11 |
   - import msvcrt
   |
note: This is an unsafe fix and may change runtime behavior
