crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__E402_E402_shebang.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 [*] Module level import not at top of file
 --> E402_shebang.py:5:1
  |
3 | print("something")
4 |
5 | import os
  | ^^^^^^^^^
help: Move module level imports to top of file
  |
3 + import os
4 | print("something")
  |
note: This is an unsafe fix and may change runtime behavior
