crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__E402_E402_shebang_docstring_and_future.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 [*] Module level import not at top of file
 --> E402_shebang_docstring_and_future.py:9:1
  |
7 | print("something")
8 |
9 | import os
  | ^^^^^^^^^
help: Move module level imports to top of file
  |
6 + import os
7 + 
  |
note: This is an unsafe fix and may change runtime behavior
