crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__E501_E501_5.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E501 Line too long (89 > 88)
 --> E501_5.py:5:89
  |
5 | "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:aaaa"  # comment  # noqa: F401
  |                                                                                         ^
  |

E501 Line too long (89 > 88)
  --> E501_5.py:14:89
   |
14 | "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:aaaa"  # comment  # type: ignore
   |                                                                                         ^
   |
