crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__E723_E723.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E723 Comparison `x == 0.0` should be replaced by `math.isclose(x, 0.0, rel_tol=1e-09, abs_tol=1e-09)`
 --> E723.py:6:8
  |
5 | # Errors
6 | assert x == 0.0
  |        ^^^^^^^^
7 | print(3.14 != a)
8 | if x == 0.3: ...
  |

E723 Comparison `3.14 != a` should be replaced by `math.isclose(3.14, a, rel_tol=1e-09, abs_tol=1e-09)`
 --> E723.py:7:7
  |
5 | # Errors
6 | assert x == 0.0
7 | print(3.14 != a)
  |       ^^^^^^^^^
8 | if x == 0.3: ...
9 | if x          ==       0.42: ...
  |

E723 Comparison `x == 0.3` should be replaced by `math.isclose(x, 0.3, rel_tol=1e-09, abs_tol=1e-09)`
 --> E723.py:8:4
  |
6 | assert x == 0.0
7 | print(3.14 != a)
8 | if x == 0.3: ...
  |    ^^^^^^^^
9 | if x          ==       0.42: ...
  |

E723 Comparison `x == 0.42` should be replaced by `math.isclose(x, 0.42, rel_tol=1e-09, abs_tol=1e-09)`
  --> E723.py:9:4
   |
 7 | print(3.14 != a)
 8 | if x == 0.3: ...
 9 | if x          ==       0.42: ...
   |    ^^^^^^^^^^^^^^^^^^^^^^^^
10 |
11 | def foo(a, b):
   |

E723 Comparison `a == b - 0.1` should be replaced by `math.isclose(a, b - 0.1, rel_tol=1e-09, abs_tol=1e-09)`
  --> E723.py:12:12
   |
11 | def foo(a, b):
12 |     return a == b - 0.1
   |            ^^^^^^^^^^^^
13 |
14 | print(x == 3.0 == 3.0)
   |

E723 Comparison `x == 3.0` should be replaced by `math.isclose(x, 3.0, rel_tol=1e-09, abs_tol=1e-09)`
  --> E723.py:14:7
   |
12 |     return a == b - 0.1
13 |
14 | print(x == 3.0 == 3.0)
   |       ^^^^^^^^
15 |
16 | # Ok
   |

E723 Comparison `3.0 == 3.0` should be replaced by `math.isclose(3.0, 3.0, rel_tol=1e-09, abs_tol=1e-09)`
  --> E723.py:14:12
   |
12 |     return a == b - 0.1
13 |
14 | print(x == 3.0 == 3.0)
   |            ^^^^^^^^^^
15 |
16 | # Ok
   |
