crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__W391_W391.ipynb.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W391 [*] Too many newlines at end of cell
 --> W391.ipynb:5:1
  |
3 |   # just a comment in this cell
4 |   # a comment and some newlines
5 | /
6 | |
7 | |
  | |_^
8 |
9 |   1 + 1
  |
help: Remove trailing newlines
5 - 
6 - 
7 - 
  |

W391 [*] Too many newlines at end of cell
  --> W391.ipynb:11:1
   |
 9 |   1 + 1
10 |   # a comment
11 | /
12 | |
13 | |
14 | |
   | |_^
15 |
16 |   1+1
   |
help: Remove trailing newlines
11 - 
12 - 
13 - 
14 - 
   |

W391 [*] Too many newlines at end of cell
  --> W391.ipynb:19:1
   |
19 | /
20 | |
   | |_^
help: Remove trailing newlines
19 - 
20 - 
   |
