crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__W391_W391_0.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W391 [*] Extra newline at end of file
  --> W391_0.py:14:1
   |
12 |     foo()
13 |     bar()
14 |
   | ^
help: Remove trailing newline
14 - 
   |
